--- a/ConsoleCalculator/ConsoleCalculator/ConsoleCalculator.csproj
+++ b/ConsoleCalculator/ConsoleCalculator/ConsoleCalculator.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CognitiveServices.Speech" Version="1.41.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Spectre.Console" Version="0.49.1" />
   </ItemGroup>
 
   <ItemGroup>
