regex modifying voice inputs wasn't being saved as variable. fixed. + additional pops of color in various confirmation messages

--- a/HabitLogger/Properties/launchSettings.json
+++ b/HabitLogger/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "profiles": {
     "HabitLogger": {
       "commandName": "Project",
+      "commandLineArgs": "--voice-input",
       "workingDirectory": "C:\\Users\\O\\source\\repos\\Learning Projects\\HabitLogger",
       "sqlDebugging": true
     }
