fix issue throwing ApplicationError when using voice-input mode. +added exit options when user in delete or update menu options.

--- a/CodingTracker/Properties/launchSettings.json
+++ b/CodingTracker/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "profiles": {
     "CodingTracker": {
       "commandName": "Project",
+      "commandLineArgs": "--voice-input",
       "workingDirectory": "C:\\Users\\O\\source\\repos\\Learning Projects\\CodingTracker",
       "sqlDebugging": true
     }
